test: add AI engine coverage tests for AutomationScheduler, InteractionExecutor, OutputValidator, LiveContextService, UserSelector, RateLimiter, AiModerationService, EngagementService
Core remains at 79% (needs ~4 lines for 80%)
AI engine at 46.9% (needs ~234 lines for 80%)

Added 9 new AI test files:
- AutomationSchedulerTest: 8 tests (cron, dailyRun, tick, init)
- InteractionExecutorTest: +9 tests (dispatch variations, scheduling)
- OutputValidatorTest: 15 tests (JSON parsing, markdown, edge cases)
- LiveContextServiceTest: 22 tests (seasons, events, news)
- UserSelectorTest: 9 tests (pool selection, assignment)
- RateLimiterTest: 8 tests (RPM/RPD/TPM limits)
- AiModerationServiceTest: 8 tests (text/image moderation)
- EngagementServiceTest: 16 tests (scoring, top cases, evaluation)
- CaseGeneratorTest: +7 tests (dry-run, pool selection, hash)